# todos

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  config.json  config.yaml  docker-compose.yml  docker-start.sh  init  init.sh  main.cc  pre-commit  run-format  run_format.sh  start  start.sh
controllers/: BaseController.cc  BaseController.h  ErrorController.cc  ErrorController.h  HealthController.cc  HealthController.h  TodosCtrl.cc  TodosCtrl.h  UsersCtrl.h  api_v1_Todos.cc  api_v1_Todos.h  api_v1_Users.cc  api_v1_Users.h
controllers/api/v1/: #CMakeLists.txt  api_v1_AuthController.cc  api_v1_AuthController.h  api_v1_TodoController.cc  api_v1_TodoController.h  api_v1_TodosControllers.cc  api_v1_UserController.cc  api_v1_UserController.h  api_v1_UsersControllers.cc  api_v1_UsersControllers.h
controllers/api/v2/: api_v2_TodosController.cc  api_v2_TodosController.h
controllers/views/: LoginViewController.cc  LoginViewController.h  RegisterViewController.cc  RegisterViewController.h  TodoViewController.cc  TodoViewController.h
docs/: README.md
docs/drogon/: bruno.json  collection.bru
docs/drogon/api-v1/: folder.bru  me.bru  reg.bru
docs/drogon/api-v2/: folder.bru
dtos/: UserDto.cc  UserDto.h
filters/: LoginFilter.cc  LoginFilter.h
helpers/: BCrypt.cc  BCrypt.h
models/: Todo.cc  Todo.h  Todos.cc  Todos.h  User.cc  User.h  Users.cc  Users.h  model.json
plugins/: Jwt.cc  Jwt.h  JwtPlugin.cc  JwtPlugin.h
scripts/: docker-compose.yml  init.sql  sb.md
utils/: error.cc  error.h
validators/: TodoValidator.cc  TodoValidator.h  UserValidator.cc  UserValidator.h
views/: layout.csp  login.csp  reg.csp  register.csp  todos.csp  user.csp
